feat(delivery): implement end-to-end delivery lifecycle and courier assignment engine
- `DeliveryService` & `DeliveryServiceImpl`: implement the core delivery lifecycle including quoting, creation, confirmation, tracking, and cancellation.
- `CourierAssignmentService`: introduce matchmaking logic to filter couriers by proximity, vehicle tier capacity, and employment type.
- `GeoService`: provide an abstraction for spatial operations with `PostgisGeoServiceImpl` for production and `HaverSineGeoServiceImpl` for H2-compatible testing.
- `ValidationService`: add a centralized utility to check the availability of unique identifiers like email, phone, and license plates.
- `DeliveryController`: expose endpoints for customer-facing delivery operations, including real-time tracking and price quoting.
- `JwtAuthFilter`: refactor security error handling to return structured JSON responses for authentication failures via `ObjectMapper`.
- `DepotService`: implement logic for finding nearest depots and determining if a delivery requires intercity routing.
- `DeliveryEventListener`: add asynchronous handling for `DeliveryAssignedEvent` to trigger automated customer notifications.
- `EmailService`: integrate `sendDeliveryAssignedEmail` with a new Thymeleaf template for courier assignment alerts.
- Entities: update `Delivery` with `route_polyline` and `estimated_duration_minutes`; extend `CustomerProfileResponse` with latitude and longitude coordinates.
- Tests: add unit tests for `ValidationServiceImpl` covering various field availability scenarios.